Fixed response spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ input {
 }
 
 .response {
+  margin-top: 5px;
   font-size: 11px;
   color: rgb(0,0,0,0.5);
 }
